RESOLVED FIXED86702
This is not a joke: 3.7X speedup from removing a call to sleep
https://bugs.webkit.org/show_bug.cgi?id=86702
Summary This is not a joke: 3.7X speedup from removing a call to sleep
Geoffrey Garen
Reported 2012-05-16 20:46:04 PDT
This is not a joke: 3.7X speedup from removing a call to sleep
Attachments
Patch (2.53 KB, patch)
2012-05-16 20:53 PDT, Geoffrey Garen
no flags
Patch (2.61 KB, patch)
2012-05-16 21:31 PDT, Geoffrey Garen
eric: review+
The GC benchmark (for posterity) (1.56 KB, text/html)
2012-09-04 15:16 PDT, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2012-05-16 20:53:40 PDT
WebKit Review Bot
Comment 2 2012-05-16 20:57:31 PDT
Attachment 142407 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/TC..." exit_code: 1 Source/WTF/wtf/TCSpinLock.h:132: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2012-05-16 21:31:13 PDT
WebKit Review Bot
Comment 4 2012-05-16 21:33:07 PDT
Attachment 142409 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/TC..." exit_code: 1 Source/WTF/wtf/TCSpinLock.h:132: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 5 2012-05-17 03:31:06 PDT
Entertaining. :)
Eric Seidel (no email)
Comment 6 2012-05-17 03:33:36 PDT
Comment on attachment 142409 [details] Patch I should note this is from the original tcmalloc import: http://trac.webkit.org/changeset/10634
Geoffrey Garen
Comment 7 2012-05-17 12:07:12 PDT
Geoffrey Garen
Comment 8 2012-09-04 15:16:41 PDT
Created attachment 162108 [details] The GC benchmark (for posterity)
Geoffrey Garen
Comment 9 2012-09-04 15:17:24 PDT
Uploading a version of the benchmark I was using, so other folks can play with it.
Note You need to log in before you can comment on or make changes to this bug.